Effort to create an installable package for the project

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
-mypy_path = C:\Users\watso\AppData\Roaming\Python\Python39\site-packages\sklearn-stub
-files = domain_scraper_2.py, price_estimator.py
+mypy_path = C:/Users/watso/AppData/Roaming/Python/Python39/site-packages/sklearn-stub
+files = house_price_estimator, tests
 ignore_missing_imports = True
 
 [mypy-scrapfly]
