--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
-mypy_path = C:\Users\watso\AppData\Roaming\Python\Python39\site-packages\sklearn-stub
-files = domain_scraper_2.py, price_estimator.py
-ignore_missing_imports = True
+files = ./
+strict_optional = True
+exclude = ^(ReferenceData|setupScripts|Reference_Images)/
 
 [mypy-scrapfly]
 ignore_missing_imports = True
@@ -10,4 +10,13 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-plotly]
+ignore_missing_imports = True
+
+[mypy-seaborn]
+ignore_missing_imports = True
+
+[mypy-geopy.*]
+ignore_missing_imports = True
+
+[mypy-sklearn.*]
 ignore_missing_imports = True
